# routes/patients.js
@@ -2,6 +2,7 @@ const express = require("express");
 const router = express.Router();
 
 const { isAuthenticated } = require("../middleware/auth");
+const { validatePatient } = require("../middleware/validatePatient");
 const patientsController = require("../controllers/patients");
 
 // GET all patients
@@ -18,27 +19,24 @@ router.get("/:id", (req, res, next) => {
   next();
 }, patientsController.getSingle);
 
-// POST create patient (Protected)
+// POST create patient (Protected + Validation)
 router.post("/", (req, res, next) => {
   // #swagger.tags = ['Patients']
   // #swagger.summary = 'Create a patient'
-  // #swagger.security = [{"GitHubOAuth": []}]
   next();
-}, isAuthenticated, patientsController.createPatient);
+}, isAuthenticated, validatePatient, patientsController.createPatient);
 
-// PUT update patient (Protected)
+// PUT update patient (Protected + Validation)
 router.put("/:id", (req, res, next) => {
   // #swagger.tags = ['Patients']
   // #swagger.summary = 'Update a patient'
-  // #swagger.security = [{"GitHubOAuth": []}]
   next();
-}, isAuthenticated, patientsController.updatePatient);
+}, isAuthenticated, validatePatient, patientsController.updatePatient);
 
 // DELETE patient (Protected)
 router.delete("/:id", (req, res, next) => {
   // #swagger.tags = ['Patients']
   // #swagger.summary = 'Delete a patient'
-  // #swagger.security = [{"GitHubOAuth": []}]
   next();
 }, isAuthenticated, patientsController.deletePatient);
 
